[package]
name = "icicle-utils"
version = "0.1.0"
edition = "2021"
authors = [ "Ingonyama " ]
description = "An implementation of the Ingonyama Cuda Library"
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/icicle"

[dependencies] 
hex="*"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-381 = { version = "0.3.0", optional = true }

rand="*" #TODO: sort dependencies that are not required by the release

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
rand="*"

[features]
default = ["bls12_381"]
bls12_381 = ["ark-bls12-381/curve"]
