[workspace]
resolver = "2"
members = [
  "icicle-cuda-runtime",
  "icicle-core",
  "icicle-curves/icicle-bw6-761",
  "icicle-curves/icicle-bls12-377",
  "icicle-curves/icicle-bls12-381",
  "icicle-curves/icicle-bn254",
  "icicle-curves/icicle-grumpkin",
  "icicle-fields/icicle-babybear",
  "icicle-hash",
]
exclude = [
  "icicle-curves/icicle-curve-template",
]

[workspace.package]
version = "1.9.1"
edition = "2021"
authors = [ "Ingonyama" ]
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/icicle"

[workspace.dependencies]
icicle-core = { path = "icicle-core" }
icicle-cuda-runtime = { path = "icicle-cuda-runtime" }
