[workspace]
resolver = "2"
members = [
  "icicle-runtime",
]
exclude = []

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = [ "Ingonyama" ]
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/icicle"

[workspace.dependencies]
icicle-runtime = { path = "icicle-runtime" }
