[workspace]
resolver = "2"
members = [
  "icicle-runtime",
  "icicle-core",
  "icicle-curves/icicle-bw6-761",
  "icicle-curves/icicle-bls12-377",
  "icicle-curves/icicle-bls12-381",
  "icicle-curves/icicle-bn254",  
  "icicle-curves/icicle-grumpkin",
  "icicle-fields/icicle-babybear",
  "icicle-fields/icicle-stark252",
  "icicle-fields/icicle-m31",
]
exclude = []

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = [ "Ingonyama" ]
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/icicle"

[workspace.dependencies]
icicle-core = { path = "icicle-core" }
icicle-runtime = { path = "icicle-runtime" }
