[package]
name = "arkworks_icicle_conversions"
version = "0.1.0"
edition = "2018"

[dependencies]
icicle-runtime = { path = "../../../wrappers/rust/icicle-runtime" }
icicle-core = { path = "../../../wrappers/rust/icicle-core"}
icicle-bn254 = { path = "../../../wrappers/rust/icicle-curves/icicle-bn254" }
ark-bn254 = { version = "0.4.0"}
ark-ff = { version = "0.4.0" , features=["parallel"]}
ark-ec = { version = "0.4.0" , features=["parallel"]}
rand = "0.8"
rayon = "1.5"
clap = { version = "<=4.4.12", features = ["derive"] }

[features]
cuda = ["icicle-runtime/cuda_backend",
        "icicle-bn254/cuda_backend",
        "icicle-bn254/no_ecntt",
        "icicle-bn254/no_g2",
]

metal = ["icicle-runtime/metal_backend",
        "icicle-bn254/metal_backend",
        "icicle-bn254/no_ecntt",
        "icicle-bn254/no_g2",
]