[package]
name = "arkworks"
version = "0.1.0"
edition = "2018"

[dependencies]
icicle-runtime = { path = "../../../wrappers/rust/icicle-runtime" }
icicle-core = { path = "../../../wrappers/rust/icicle-core" }
icicle-bn254 = { path = "../../../wrappers/rust/icicle-curves/icicle-bn254" }
ark-bn254 = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
rand = "0.8"
