[package]
name = "fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icicle-cuda-runtime = { path = "../../../wrappers/rust/icicle-cuda-runtime" }
icicle-core = { path = "../../../wrappers/rust/icicle-core" }
icicle-bn254 = { path = "../../../wrappers/rust/icicle-curves/icicle-bn254" }
icicle-bls12-381 = { path = "../../../wrappers/rust/icicle-curves/icicle-bls12-381" }

# Arkwork
ark-ff = "0.4.2"
ark-std = "0.4"
ark-bn254 = { version = "0.4.0", default-features = false, features = [
  "curve",
] }
num-bigint = { version = "0.4.4", default-features = false }
rand = "0.8.5"

[features]
profile = []
